--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "consign": "^0.1.6",
     "ejs": "^3.1.7",
     "express": "^4.17.3",
-    "express-validator": "^2.20.8"
+    "express-validator": "^2.20.8",
+    "socket.io": "^4.5.0"
   }
 }
